<resources>
    <string name="app_name">BlackList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Contact</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_list">Enable recommend block list</string>
    <string name="tittle_history">Recents</string>
    <string name="tittle_my_black_list">My Black List</string>
</resources>