<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blacklist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_my_black_list"
        android:name="com.example.blacklist.ui.myBlackList.MyBlackListFragment"
        android:label="@string/tittle_my_black_list"
        tools:layout="@layout/fragment_my_black_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.blacklist.ui.Contact.ContactFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.blacklist.ui.notifications.NotificationsFragment"
        android:label="@string/tittle_history"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.blacklist.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>